[project]
name = "intro-dgm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deepchem>=2.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytorch-model-summary>=0.1.2",
    "rdkit>=2025.9.6",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
